Proyecto_Tarea-Estilo azul

--- a/miapp/templates/saludo.html
+++ b/miapp/templates/saludo.html
@@ -6,7 +6,7 @@
 {% block content %}
   
     <h1 class="title">Bienvenidos</h1>
-    <h2>Flor Cerdán</h2>
+    <h2>Cruz Huanca</h2>
     <h3>Python....</h3>
     {{block.super}}
 {% endblock %}
