--- a/miapp/static/css/style.css
+++ b/miapp/static/css/style.css
@@ -8,14 +8,14 @@
 }
  
 body{
-    background-color: #f2f2f2;
+    background-color: #65abb8;
 }
  
 /* Estilos Cabecera */
 header{
     width: 1212px;
     height: 140px;
-    background-color: #23282B;
+    background-color: rgb(0, 132, 255);
     margin: 0 auto;
 }
  
@@ -40,7 +40,7 @@ header{
     margin-left: 20px;
     letter-spacing: 2px;
     font-weight: lighter;
-    color: #2ba977;
+    color: darkblue;
 }
 
 /* ESTILOS PARA LA ZONA DE NAVEGACIÓN (nav) */ 
@@ -49,8 +49,8 @@ nav{
     width: 1250px;
     height: 40px;
     margin: 0 auto;
-    background-color: #1B1E1F;
-    border: 1px solid #333333;
+    background-color: rgb(119, 236, 252);
+    border: 1px solid #3908ec;
     box-shadow: 0px 22px 22px gray;
     font-size: 15 px;
 }
@@ -70,7 +70,7 @@ nav ul li a{
     display: block;
     padding-left: 15px;
     padding-right: 15px;
-    color: #d1d4d6;
+    color:black;
 }
 
 /*Efectos en los Hipervínculos*/
@@ -90,7 +90,7 @@ nav ul li a:hover{
 .esquina-izquierda{
     display: block;
     border-left: 20px solid transparent;
-    border-top: 10px solid #2b2f30;
+    border-top: 10px solid #2716c7;
     float: left;
 }
 
@@ -144,7 +144,7 @@ footer{
     margin: 0 auto;
     padding-top: 20px;
     padding-bottom: 20px;
-    box-shadow: 0px 0px 20px gray;
+    box-shadow: 0px 0px 20px rgb(8, 23, 243);
 }
 
 
