--- a/miapp/templates/layout.html
+++ b/miapp/templates/layout.html
@@ -8,7 +8,7 @@
         {% block title %}
 
         {% endblock %}
-        | Flor Cerdán
+        | Cruz Jean
     </title>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div id="logotipo">
-            <img src="{% static 'images/logoDJango.png' %}" />
+            <img src="{% static 'images/untels1.png' %}" />
             <h1>Proyecto Web (LP3)</h1>
         </div>
     </header>
@@ -53,7 +53,7 @@
 
     </div>
     <footer>
-        UNTELS - Lenguaje de Programación III &COPY; Flor Cerdán
+        UNTELS - Lenguaje de Programación III &COPY; Cruz Jean
     </footer>
 
 
